--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
         d-flex justify-content-start p-3 align-middle">
             <img src="img/duck.png" width="60px" height="60px" alt="">
               <ul class="list-group list-group-horizontal px-3 d-none d-lg-flex">
-                <li class="px-2 "><a href="#">An item</a></li>
+                <li class="px-2  "><a href="#">An item</a></li>
                 <li class="px-2 "><a href="#">An item</a></li>
                 <li class="px-2 "><a href="#">An item</a></li>
                 <li class="px-2 "><a href="#">An item</a></li>
               </ul>
+              <div class="input-group w-25 ms-auto d-none d-lg-flex ">
+                <input type="search" class="form-control rounded mx-2" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+                <button class="btn btn-dark rounded border" type="submit">Search</button>
+              </div>
+              
               <i class="fa-solid fa-bars icona ms-auto d-lg-none"></i>
           </nav>
     </header>
