--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <main>
             <div class="catalogo d-flex justify-content-between my-5">
                 <h2>Catalogo Libri</h2>
-                <button class="btn btn-primary" type="submit">Aggiungi Libro</button>
+                <a class="btn btn-primary" href="addbook.html" >Aggiungi Libro</a>
             </div>
             <table class="table table-striped table-hover align-middle table-sm">
                 <thead>
