--- a/addbook.html
+++ b/addbook.html
@@ -48,7 +48,7 @@
                         Titolo versione italiana
                     </div>
                 </div>
-                <div class="col-12">
+                <div class="col-12 col-lg-4">
                     <label for="genere" class="form-label">Genere</label>
                     <select class="form-select" aria-label="Default select example" id="genere">
                         <option selected>Scegli il genere</option>
@@ -57,11 +57,11 @@
                         <option value="3">Romantico</option>
                     </select>
                 </div>
-                <div class="col-12">
+                <div class="col-12 col-lg-4">
                     <label for="anno" class="form-label">Anno</label>
                     <input type="number" class="form-control" id="anno" min="1000" max="2024" placeholder="inscerisci l'anno della pubblicazione"> 
                 </div>
-                <div class="col-12">
+                <div class="col-12 col-lg-4">
                     <label for="isbn" class="form-label">ISBN#</label>
                     <input type="text" class="form-control" id="isbn" maxlength="16" minlength="16" placeholder="inscerisci il codice ISBN#" required> 
                 </div>
