ancor on logo to go back to main page

--- a/addbook.html
+++ b/addbook.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar bg-dark
         d-flex justify-content-start p-3 align-middle">
-            <img src="img/duck.png" width="60px" height="60px" alt="">
+            <a href="index.html"><img src="img/duck.png" width="60px" height="60px" alt=""></a>
               <ul class="list-group list-group-horizontal px-3 d-none d-lg-flex">
                 <li class="px-2  "><a href="#">An item</a></li>
                 <li class="px-2 "><a href="#">An item</a></li>
